--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,19 @@
         <link rel="stylesheet" href="assets/css/bundle.css" />
     </head>
 
-    <body>
-
-        <div class="sha_workspaceArea container-fluid">
-
-            <div class="sha_general_input_box col-md-3">
-                <div class="col-md-12">
-                    <input id="username" type="text"/>
-                    <label for="username"> Label </label>
-                </div>
-            </div>
-
+    <body ng-app="App">
+        <div class="jumbotron">
+          <div class="container">
+            <h1> Master Factory Pattern Example </h1>
+          </div>
+        </div>
+        <div ng-controller="MainCtrl" class="col-md-6">
+          <input-box></input-box>
         </div>
 
+        <div ng-controller="SibCtrl" class="col-md-6">
+          <display></display>
+        </div>
 
         <script src="assets/js/bundle.js"></script>
 
